feat(monitor): 添加盘中监控信号音频提示和模拟功能
- 在SSE信号推送时播放不同类型的音频提醒(BUY/STOP/WATCH)
- 添加模拟盘中周期功能用于非交易日测试推送效果
- 实现信号历史清除功能和前端清理按钮
- 优化信号类型判断逻辑，区分价格判断和K线扫描结果
- 更新信号含义说明文档，明确价格判断与K线扫描的区别
- 修复数据库查询中的endRows.getFirst()兼容性问题
- 简化排名和计数查询的空值检查逻辑